Describe hyperparams optimisation

--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -70,7 +70,7 @@
     	Fig summarises our data pre-processing pipeline. 
     	
     	
-    \subsection{Convolutional Neural Networks}
+    \subsection{Convolutional Neural Networks}\label{secCNN}
     As we are dealing with an image classification problem, it lies at hand to employ a variation of a convolutional neural network (CNN). First devised in a seminal paper \todo{ref CNN}, CNNs are a special kind of neural network that employ, in particular, so-called convolutional layers and pooling layers, often stacked on top of each other iteratively. While vanilla feed-forward networks could, in principal, also process and classify image data, employing CNNs comes with several advantages:
     \begin{itemize}
     	\item \textbf{Spacial relationships}: Images are two-dimensional	(per channel). Therefor, it is not only the actual pixel value that holds information but also where this pixel is located and what values neighbouring pixels hold. This topological information is lost in the flattened input of feed-forward networks; CNNs, on the other hand, process an image per channel in its two-dimensional representation. 
@@ -92,10 +92,24 @@
     Before we discuss our network topology, we offer some reasoning for it in the next section.
 
  	
-    \subsection{Hyperparameters Optimization}
-    Neural networks are complex black-box models and it is often not straight-forward to estimate a-priori the result of certain choices with regard to their design (e.g. number and type of layers) and their configuration (i.e. dropout probability, weight decay). These unknowns are generally referred to as \textit{hyperparameters} and finding near-optimal values is an important step before actually training the final model.
+    \subsection{Hyperparameters Optimisation}
+    Neural networks are complex black-box models and it is often not straight-forward to estimate a-priori the consequences of certain choices that drive model complexity (e.g. number and type of layers) and impact the performance (e.g. dropout probability, weight decay) both with respect to training speed and fit. These unknowns are generally referred to as \textit{hyperparameters} and finding reasonable values is an important step before actually training the model.
     
-    Hyperparameter optimization is computationally expensive as many neural models need to be trained. To complicate things, hyperparameters are notoriously inter-dependent so that sequential optimization, e.g. first fixing the number of layers and then deciding a dropout-rate, is out of the question. We utilise the Optuna framework to aid in hyperparameters optimisation. For resource constraints, we limit ourself to only 8 epochs of training per trial and merely 12 trials, and expose the models to only half of the available dataset; our results here are to be understood as a principle proof-of-concept to illustrate the general idea. We do not make the claim here that our hyperparamters optimisation is encompassing enough to have identified the absolutely best model for this task. In the sequel, we put more emphasis on our choice of hyperparamters to be optimised, and only sketch the results. 
+    Hyperparameters optimisation is computationally expensive as many neural models (one per hyperparameter configuration) need to be trained. To complicate things, hyperparameters not only tend to be sensititve to the data, but are notoriously inter-dependent so that sequential optimisation, e.g. first fixing the number of layers and then deciding a dropout-rate, is out of the question. In this work, we utilise the Optuna framework to aid in hyperparameters optimisation. Due to resource constraints, we limit ourself to only 8 epochs of training per trial and merely 15 trials, and expose each model to only half of the available dataset; our results here are to be understood as a principle proof-of-concept to illustrate the general idea. We do not make the claim here that our hyperparamters optimisation is encompassing enough to have identified the absolutely best model for this task. In the sequel, we justify our choice of optimisable and fixed hyperparameters.
+    
+    \begin{itemize}
+    	\item \textbf{Number of convolutions}. We explore a variable number of convolutions in our network, chosen  in the range $[4, 8] \cap \mathbb{N}$. Deeper models tend to generalise better but the depth comes at the expense of longer training times as the number of trainable parameter increases. As higher model complexity could, in principal, make a model more susceptible to overfitting, this hyperparameter is a prime example for the need of simultaneous optimisation with hyperparameters for regularisation techniques.
+    	\item \textbf{Pooling layers}: Max-pooling has the strongest influence on dimensionality. We choose the number of pooling layers to be $\lfloor \frac{c}{2}\rfloor$ where $c$ denotes the number of convolutional layers in the respective trial. However, as the choice of parameters in the convolutional layers affects image size as well, we adjust the number of pooling layers such that the final output size of an image, after passing through all convolution and max-pooling layers) is at least 4 and at most 12. The reasoning for this constraint is as follows: if the output image is too large when fed to the final linear layer, training speed suffers; if it is too small, the information loss is too high. Pooling is performed with kernel\_size=2, stride=2, and padding=0, parameters that have been shown to work well in practice\todo{ref}.
+    	\item \textbf{Convolution kernel size}: In practice, typical kernel sizes are 3x3, 5x5, and 7x7. Larger kernels tend to better detect larger features as they cover a higher region compared to a smaller kernel that excels at the identification of more granular features. We allow kernel size of 3x3, 5x5, and 7x7 for the first convolution, and 3x3 and 5x5 for the second convolution, while all subsequent convolutions have kernel size 3. This approach favours focusing on the smaller features in later layers where the image size is smaller.  
+    	\item \textbf{Convolution stride and padding}: For the first two convolutions, we choose stride 2 for small networks (number $c$ of convolutional layers $\le 6$), and a larger stride of 3 for deeper architectures ($c > 6$). The reasoning behind this choice is that more convolutions mean more passes of various filters over the same image. A larger stride counters, to some extent, the additional computational burden of network depth as it essentially has the effect of downsampling the image. Beginning at the third convolution, choose a constant stride of 1: the image has already been reduced in size at this point and in conjunction with the small filters, a granular scan is desirable. For padding, we choose the value $\lfloor \frac{c}{2}\rfloor - 1$ to slightly reduce the information loss at the borders and reduce dimensionality not too much in deeper networks. 
+    	\item \textbf{Number of feature maps per convolution}: Constructing more feature maps allows for a more robust feature extraction, but a balance needs to be struck here: as the input dimension of the fully-connected layer at the bottom is given by $f \cdot d^2$ where $f$ is the number of channels and $d$ the width/height of the image after all convolutions, ending up with too many channels will hurt training speed considerably. Therefor, we decrease the number of output channels for the first convolution depending on the network depth as given in the following table\todo{table}. Each subsequent convolution has twice as many output channels as input channels. 
+    	\item \textbf{Learning rate}: We use the Adams optimiser, which uses an adaptive learning rate; nonetheless, choosing a good base rate can speed up learning particular in the early epochs. We therefor sample learning rates uniformly from $[0.0001, 0.004]$.
+    	\item \textbf{Dropout rate}: We sample dropout rates from the interval [0.3, 0.7]. The effect of dropout has already been explained in Section \ref{secCNN}.
+    	\item \textbf{Batch size}: With a higher batch size, fewer weight updates are calculated per epoch. This reduces the computational load at the potential expense of accuracy. We sample batch sizes from the set $\{16, 32, 64, 128, 256, 512, 1024\}$.
+    	\item 
+    \end{itemize}
+    
+    We optimised above set of hyperparameters using an elitist genetic algorithm \todo{reference} with population size 20, 
     
     \subsection{Final Topology}
 
